Fix mobile overflow on languages with large text

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -9062,6 +9062,7 @@ a.footer-url {
 
     .header2 .container {
         width: 100%;
+        overflow: hidden;
     }
 
     .more:after {
